--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="th">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini E-Commerce</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-  <body>
+<body>
     <header>
-      <h1>My Simple Store</h1>
-
-      <div id="loader" class="loader">Loading...</div>
-      <div id="content" style="display: none">
-        <div class="search-container">
-          <input type="text" id="searchInput" placeholder="ค้นหาสินค้า..." />
+        <h1>My Simple Store</h1>
+        <div id="loader" class="loader">Loading...</div>
+        <div id="content" style="display: none;">
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="ค้นหาสินค้า...">
+            </div>
         </div>
-      </div>
-
-      <div class="search-container">
-        <input type="text" id="searchInput" placeholder="ค้นหาสินค้า..." />
-      </div>
     </header>
-    <main id="product-list"></main>
+    <main id="product-list">
+    </main>
     <script src="js/main.js"></script>
-  </body>
+</body>
+
 </html>
